@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>dawdler-boot-train</groupId>
 		<artifactId>dawdler-boot-train</artifactId>
-		<version>0.17.1-jdk17-RELEASES</version>
+		<version>0.0.2-RELEASES</version>
 	</parent>
 	<artifactId>order-service</artifactId>
 
@@ -56,7 +56,7 @@
 			<dependency>
 				<groupId>dawdler-boot</groupId>
 				<artifactId>dawdler-boot-server-dependencies</artifactId>
-				<version>0.17.1-jdk17-RELEASES</version>
+				<version>0.0.2-RELEASES</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -68,7 +68,7 @@
 			<plugin>
 				<groupId>dawdler-boot</groupId>
 				<artifactId>dawdler-boot-maven-plugin</artifactId>
-				<version>0.17.1-jdk17-RELEASES</version>
+				<version>0.0.2-RELEASES</version>
 				<executions>
 					<execution>
 						<goals>
@@ -83,23 +83,8 @@
 				<version>3.8.1</version>
 				<configuration>
 					<encoding>${project.build.sourceEncoding}</encoding>
-					<source>17</source>
-					<target>17</target>
-					<!--debug>true</debug>-->
-					<compilerArgs>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.misc=dawdler.core</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.loader=dawdler.server</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.perf=dawdler.server</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.loader=dawdler.boot.server</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.misc=dawdler.boot.server</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.loader=dawdler.util</arg>
-					</compilerArgs>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
