@@ -3,7 +3,7 @@
   <parent>
     <groupId>dawdler-boot-train</groupId>
     <artifactId>dawdler-boot-train</artifactId>
-    <version>0.17.1-jdk17-RELEASES</version>
+    <version>0.0.2-RELEASES</version>
   </parent>
   <artifactId>order-web-api</artifactId>
   	<dependencies>
@@ -43,7 +43,7 @@
 			<dependency>
 				<groupId>dawdler-boot</groupId>
 				<artifactId>dawdler-boot-web-dependencies</artifactId>
-				<version>0.17.1-jdk17-RELEASES</version>
+				<version>0.0.2-RELEASES</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -54,7 +54,7 @@
 			<plugin>
 				<groupId>dawdler-boot</groupId>
 				<artifactId>dawdler-boot-maven-plugin</artifactId>
-				<version>0.17.1-jdk17-RELEASES</version>
+				<version>0.0.2-RELEASES</version>
 				<executions>
 					<execution>
 						<goals>
@@ -69,21 +69,8 @@
 				<version>3.8.1</version>
 				<configuration>
 					<encoding>${project.build.sourceEncoding}</encoding>
-					<source>17</source>
-					<target>17</target>
-					<!--debug>true</debug>-->
-					<compilerArgs>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.misc=dawdler.core</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.loader=dawdler.util</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.loader=order.web.api</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.misc=order.web.api</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.perf=order.web.api</arg>
-					</compilerArgs>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
